# timeproject25

./: .flake8  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  asgi.py  index.html  manage.py  package-lock.json  package.json  quasar.config.ts  requirements.txt  run_server.py  tsconfig.json
.cargo/: config.toml
docs/: README.md
public/icons/: about.txt
src/layouts/: MainLayout.vue
timeproject25/: celery.py
timeproject25/apps/core/management/commands/: update_admin.py
timeproject25/apps/timeproject25/: apps.py  consumers.py  tasks.py
timeproject25/apps/timeproject25/api/: urls.py  views.py
timeproject25/config/: environment.py  settings.py
timeproject25/config/urls/: __init__.py  swagger_urls.py
timeproject25_service/: Cargo.toml
timeproject25_service/src/: extra_handlers.rs  main.rs  swagger_docs.rs
timeproject25_service/templates/: base_minimal.html
