[package]
name = "timeproject25_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.6"
log = "0.4.25"
serde_json = "1.0.139"
actix-web = "4.9"
actix-files = "0.6.6"
askama = "0.12.1"
utoipa = { version = "3.3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web", "debug-embed"] }